# invoice-factory

./: .coveragerc  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
.ai/: README.md
.ai/rules/: django.md  style.md  testing.md
.ai/tasks/: 01-atomic-transactions.md  02-delete-requires-post.md  03-deduplicate-invoice-views.md  04-item-save-n-plus-1.md  05-fix-thousand-separator.md  06-fix-nip-validator.md  07-replace-generic-exceptions.md  08-api-rate-limiting.md  09-fix-ci-pytest.md  10-unique-constraint-migration.md  11-add-db-indexes.md  12-remove-dead-code.md  13-sentry-sample-rate.md  14-add-timestamps.md  15-ksef-integration.md
.gemini/: text.txt
.github/workflows/: actions.yml  build.yml  cicd.yml  default.yml  release.yml  test.yml
accountants/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
accountants/migrations/: 0001_initial.py  0002_alter_accountant_email.py  0003_accountant_phone_number.py  0004_alter_accountant_options_alter_accountant_name.py  0005_alter_accountant_email.py  0006_alter_accountant_email.py  0007_alter_accountant_name.py  0008_remove_accountant_user_accountant_company.py  0009_alter_accountant_email_and_more.py  0010_alter_accountant_options_alter_accountant_company_and_more.py
accountants/tests/: test_forms.py  test_models.py  test_views.py
base/: __init__.py  asgi.py  celery.py  mixins.py  runner.py  settings.py  storages.py  urls.py  urls_api.py  validators.py  wsgi.py
base/settings/: common.py  dev.py  production.py  test.py
companies/: admin.py  factories.py  forms.py  managers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py  views_api.py
companies/govs_adapters/: ceidg_adapter.py  ceidg_example_response.json  ceidg_example_response.json.py  gus_adapter.py  krs_adapter.py  krs_example_response.json
companies/migrations/: 0001_initial.py  0002_alter_company_country_delete_country.py  0002_alter_company_nip_alter_company_regon.py  0002_initial.py  0003_company_is_my_company.py  0003_initial.py  0004_alter_company_email.py  0004_alter_company_options_alter_company_address_and_more.py  0005_alter_company_city_alter_company_nip_and_more.py  0005_alter_company_options_alter_company_unique_together.py  0006_alter_company_city_alter_company_nip_and_more.py  0006_alter_company_nip_alter_company_regon.py  0007_alter_company_city_alter_company_phone_number_and_more.py  0007_monthsummaryrecipient.py  0008_alter_company_city_alter_company_nip_and_more.py  0008_alter_monthsummaryrecipient_day_and_more.py  0009_alter_company_city_alter_company_email_and_more.py  0009_summaryrecipient_delete_monthsummaryrecipient.py  0010_alter_company_nip_alter_company_regon.py  0010_delete_summaryrecipient.py  0011_alter_company_options_alter_company_address_and_more.py  0012_alter_company_nip_alter_company_zip_code.py  0013_company_ksef_last_fetched_at_company_ksef_token.py  0014_company_created_at.py  0015_alter_company_ksef_last_fetched_at.py
companies/static/: create_country.js
companies/tests/: test_adapters.py  test_forms.py  test_model.py  test_models.py  test_tasks.py  test_views.py
countries/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
countries/migrations/: 0001_initial.py  0002_alter_country_country.py  0002_initial.py  (+11 more)
currencies/: admin.py  factories.py  forms.py  models.py  nbp_adapter.py  serializers.py  tasks.py  urls.py  utils.py  views.py  views_api.py
deployment/: entrypoint.sh  gunicorn.conf.py
invoice_manager/: settings.py  urls.py
invoices/: admin.py  apps.py  factories.py  forms.py  managers.py  models.py  receivers.py  serializers.py  tasks.py  urls.py  utils.py  views.py  views_api.py
items/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
persons/: admin.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
reports/: forms.py  urls.py  utils.py  views.py
summary_recipients/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
templates/: base.html  create_company.html  create_country.html  create_country.js  create_currency.html  create_invoice.html  create_item.html  create_vat.html  detail_company.html  detail_country.html  detail_currency.html  detail_invoice.html  detail_item.html  detail_vat.html  detail_vat_rate.html  faq.html  index.html  invoices.html  list_companies.html  list_currencies.html  list_invoices.html  list_items.html  list_vat_rates.html  list_vates.html  pagination.html  pdf.html  privacy_policy.html  replace_item.html  replace_vathtml  terms.html
users/: admin.py  factories.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py  views_api.py
vat_rates/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views_api.py
(+266 files in other folders)
