[tool.poetry]
name = "invoice-manager"
version = "0.2.1"
description = ""
authors = ["Wioletta Wajda <wioletta.wajda@devsoft.pl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.11"
celery = "^5.2.7"
django-environ = "0.11.2"
djangorestframework = "^3.14.0"
black = "24.4.0"
isort = "^5.12.0"
django-filter = "24.2"
django-extensions = "^3.2.1"
xhtml2pdf = "^0.2.9"
num2words = "^0.5.12"
pytest-django = "^4.5.2"
coverage = "^7.2.5"
factory-boy = "^3.2.1"
requests = "2.32.2"
redis = "5.0.3"
parameterized = "^0.9.0"
django-factory-boy-generator = "^1.0.4"
django-cors-headers = "^4.3.1"
django-storages = "^1.14.2"
gunicorn = "22.0.0"
psycopg = "^3.1.18"
jinja2 = "3.1.4"
sentry-sdk = "^2.3.1"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''

(
  /(
    | \.git
    | migrations
    | venv
    | \.env
  )/
)
'''

[tool.isort]
skip = [".git", "migrations", "venv", ".env"]

[tool.semantic_release]
branch = "master"
version_variable = "base/__init__.py:__version__"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_message = "chore(release): release {version}"
commit_author = "github-actions <actions@devsoft.pl>"
tag_commit = true
upload_to_pypi = false
upload_to_release = true
hvcs = "github" # gitlab is also supported
